# gradspec

./: README.md  ceg-2017-18.json  cs-2015-16.json  gradspec-print.py
archive/: ceg-2017-18-v0.1.0.json
gradspec-tools/: Cargo.toml
gradspec-tools/src/: main.rs
