[package]
name = "gradspec-tools"
version = "0.1.0"
authors = ["Sriram Sami <frizensami@gmail.com>"]

[dependencies]
# The core APIs, including the Serialize and Deserialize traits. Always
# required when using Serde.
serde = "1.0"

# Support for #[derive(Serialize, Deserialize)]. Required if you want Serde
# to work for structs and enums defined in your crate.
serde_derive = "1.0"

# Specific code for JSON data types
serde_json = "1.0"